force-app/main/default/objects/Investment_Committee_Meeting__c/Investment_Committee_Meeting__c.object-meta.xml
<CustomObject>
    <label>Investment Committee Meeting</label>
    <nameField>
        <label>Investment Committee Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investment Committee Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>