force-app/main/default/objects/Investment_Committee_Meeting__c/fields/Investment_Committee__c.field-meta.xml
<CustomField>
    <fullName>Investment_Committee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment Committee</label>
    <referenceTo>Investment_Committee__c</referenceTo>
    <relationshipLabel>Investment Committee Meetings</relationshipLabel>
    <relationshipName>Investment_Committee_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>