force-app/main/default/objects/Investment_Committee_Meeting__c/fields/Meeting_Location__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Location__c</fullName>
    <label>Meeting Location</label>
    <type>TextArea</type>
</CustomField>